--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   rabbitmq:
     host: 127.0.0.1
     port: 5672
-    username: root
-    password: root
+    username: guestdevlop
+    password: guestdevlop
     #    确认消息到交换机
     publisher-confirm-type: correlated
     #确认消息已经发送到队列
