--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
 target/
+steamAPi/target
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -18,6 +19,7 @@ target/
 *.iws
 *.iml
 *.ipr
+*.class
 
 ### NetBeans ###
 /nbproject/private/
